--- a/BuzzBraceletVendor/app/src/main/res/values/strings.xml
+++ b/BuzzBraceletVendor/app/src/main/res/values/strings.xml
@@ -1,20 +1,3 @@
 <resources>
-    <string name="app_name">BuzzBraceletVendor</string>
-
-    <string-array name="android_versions">
-        <item>Cupcake</item>
-        <item>Donut</item>
-        <item>Eclair</item>
-        <item>Froyo</item>
-        <item>Gingerbread</item>
-        <item>Honeycomb</item>
-        <item>Ice Cream</item>
-        <item>Jelly Bean</item>
-        <item>KitKat</item>
-        <item>Lollipop</item>
-        <item>Marshmallow</item>
-        <item>Nougat</item>
-        <item>Oreo</item>
-        <item>Android P</item>
-    </string-array>
+    <string name="app_name">Buzz Vendor</string>
 </resources>
